Fixed wraparound
Fixed wrap around of links on top.

--- a/dev_exercise/css/fs.scss
+++ b/dev_exercise/css/fs.scss
@@ -67,6 +67,7 @@ button {
     -webkit-margin-after: 0em;
     margin-bottom: 50px;
     padding-left: 0px;
+    white-space: nowrap;
     li {
         list-style: inside;
         list-style-type: none;
